Se actualziaron las vistas y se corrigieron errores existentes

--- a/client-app/src/app/home/contrato/lista-contrato/lista-contrato.component.html
+++ b/client-app/src/app/home/contrato/lista-contrato/lista-contrato.component.html
@@ -76,7 +76,7 @@
       Editar
     </button>
 
-    <button type="button" class="btn btn-sm btn-secondary" *ngIf="contratos.length > 0"
+    <button type="button" class="btn btn-sm btn-secondary" *ngIf="total > 0"
             (click)="exportToExcel()">
       <clr-icon shape="pencil"></clr-icon>
       Export
