--- a/client-app/src/app/home/equipo/lista-equipo/lista-equipo.component.html
+++ b/client-app/src/app/home/equipo/lista-equipo/lista-equipo.component.html
@@ -93,7 +93,7 @@
         <clr-icon shape="pencil"></clr-icon>
         Editar
       </button>
-      <button type="button" class="btn btn-sm btn-secondary" *ngIf="equipos.length > 0"
+      <button type="button" class="btn btn-sm btn-secondary" *ngIf="this.total > 0"
               (click)="exportToExcel()">
         <clr-icon shape="pencil"></clr-icon>
         Export
